app/main/main.css
html {
    -webkit-tap-highlight-color: transparent;
}

body {
    background-color: #2f3136;
}

.button-container {
    text-align: center;
}

.message {
    display: inline-block;
    text-align: center;
}

#message-text {
    height: 2em;
    border-radius: 3px;
    background-color: #424549;
    border: 2px solid #686a6e;
    color: #bebfc1;
    text-align: center;
    width: 20em;
}

#message-text:focus {
    color: #bebfc1;
}

.buttons {
    background-color: #f44336;
    border-radius: 8px;
    color: white;
    padding: 10px 24px;
    text-align: center;
    text-decoration: none;
    border: 2px solid #f44336 !important;
    font-size: 10px;
}

.buttons:hover {
    transition-duration: 0.4s;
    background-color: white;
    color: black;
}

#start {
    background-color: #4CAF50 !important;
    border: 2px solid #4CAF50 !important;
}

#start:hover {
    background-color: white !important;
    background-color: white !important;
}

.display-container {
    display: inline-block;
    width: 100%
}

.text-display {
    margin-top: 1em;
    margin-left: 1em;
    margin-right: 0em;
    float: left;
    background-color: #36393e;
    /* border: 0.063em solid black; */
    height: 25em;
    width: 22em;
    overflow-y: scroll;
}

.message-display {
    margin-top: 1em;
    margin-left: 1em;
    margin-right: 1em;
    float: right;
    background-color: #36393e;
    /* border: 0.063em solid black; */
    height: 25em;
    width: 22em;
    overflow-y: scroll;
}

.message {
    color: #b9bab6;
}

.channel {
    color: #b9bab6;
}

.message-container {
    width: auto;
    text-align: center;
    border-bottom: 1px solid #3e4146;
}

.server-container {
    width: auto;
    text-align: center;
}

.make-gray {
    color: #faa61a;
}

.server {
    color: #b9bab6;
}

.message-holder {
    border-top: 1px solid #3e4146;
    margin-bottom: 0;
    background: transparent;
    display: inline-block;
    overflow: hidden;
    position: relative;
    padding-left: 0.5em;
    width: 100%;
    height: auto;
    text-align: left;
    line-height: 2em;
    max-width: calc(100% - 0.5em);
    word-wrap: break-word;
}

.message-author {
    display: inline-block;
    margin-top: -1em !important;
    margin-bottom: 0;
}

.message-received {
    color: #b9bab6;
    display: inline-block;
    margin-top: -1em !important;
    margin-bottom: 0;
}

.pfp {
    display: inline-block;
    border-radius: 50%;
    width: 20px;
    margin-right: 0.5em;
    margin-top: 1em;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background-color: #2f3136;
    border-color: #36393e;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    background-color: #1e2124;
    border-color: #36393e;
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
}

.material-icons.md-18 {
    font-size: 18px;
}

.material-icons.md-dark.md-inactive {
    color: rgba(0, 0, 0, 0.26);
}

